--- a/mp03.qmd
+++ b/mp03.qmd
@@ -16,6 +16,7 @@ library(dplyr)
 library(tidyr)
 library(stringr)
 library(httr)
+library(knitr)
 library(tidyverse)
 library(ggplot2)
 ```
@@ -168,7 +169,7 @@ statedistricts_change <- statedistricts_1976to2022 %>%
   rename(districts_1976 = `1976`, districts_2022 = `2022`) %>%
   mutate(districts_change = districts_2022 - districts_1976) %>%
   arrange(desc(districts_change))
-view(statedistricts_change)
+kable(statedistricts_change)
 
 ### Elections in our data where the election would have had a different outcome if the “fusion” system was not used and candidates only received the votes from their “major party line” (Democrat or Republican). ###
 
@@ -214,7 +215,7 @@ presidentialpartyvotes <- presidentvotes1976to2020 %>%
   summarize(total_votes_presidential = sum(candidatevotes), .groups = 'drop')
 congressionalandpresidential <- merge(congressionalpartyvotes, presidentialpartyvotes, by = c("year", "party"), all.x = TRUE)
 congressionalandpresidential$iscongresshigher <- congressionalandpresidential$total_votes_congressional > congressionalandpresidential$total_votes_presidential
-view(congressionalandpresidential)
+kable(congressionalandpresidential)
 ```
 
 To answer our first question, we must calculate the difference in how many congressional seats a state had in 1976 vs 2022. We start by grouping the amount of congressional seats by state for those two years, then we subtract the 2022 value from the 1976 value. A trend we can see in the data is that since 1976, southern states have been gaining congressional districts, while northern states have been loosing them.
